still working on mobile issues

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,9 @@ body {
   padding: 0;
   background-color: #101010;
   color: #f5f5f5;
-  min-height: 100%;
+  min-height: 100svh;
   width: 100%;
+  overflow: hidden;
 }
 #root {
   min-height: 100svh; /* mobile-safe viewport */
